# blims

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.streamlit  Makefile  README.md  create_test_data.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.sh  streamlit_app.py  test_data.py
api/: __init__.py  routes.py
aws/: aws_check.sh  blims-vpc.yaml  build_deploy_pipeline.sh  cloudformation.yaml  deploy.sh  rna_pipeline_definitions.yaml
aws/rna_pipeline_dockerfiles/annotation/: Dockerfile  annotate_assembly.sh
aws/rna_pipeline_dockerfiles/assembly/: Dockerfile  assemble_reads.sh
aws/rna_pipeline_dockerfiles/db_update/: Dockerfile  update_database.py  update_database.sh
blims/: __init__.py  config.py
blims/api/: __init__.py  routes.py
blims/core/: __init__.py  analysis_service.py  container_manager.py  repository.py  service.py
blims/models/: __init__.py  analysis.py  feature.py  genome.py  job.py  sample.py
blims/repositories/: feature_repository.py  genome_repository.py  job_repository.py  sample_repository.py
blims/services/: genome_service.py  job_service.py  sample_service.py
blims/utils/: __init__.py  aws_utils.py  bioinformatics.py  file_utils.py  visualization.py
core/: __init__.py  repository.py  service.py
docs/: aws-resources.md  bioinformatics.md  quickstart.md
models/: __init__.py  sample.py
tests/: __init__.py  conftest.py  test_api.py  test_genome.py  test_repository.py  test_sample.py  test_service.py
utils/: __init__.py  file_utils.py
(+6 files in other folders)
